# api/swagger/swagger.yaml
@@ -60,6 +60,87 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /ubicacion:
+    x-swagger-router-controller: ubicacion
+    get:
+      security:
+        - basicAuth: []
+        - tokenAuth: []
+      description: Obtener ubicacion
+      responses:
+        "200":
+          description: Sucess
+          schema:
+            $ref: "#/definitions/OkResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      security:
+        - basicAuth: []
+        - tokenAuth: []
+      description: añadir Ubicacion
+      operationId: addUbicacion
+      parameters:
+        - name: ubicacion
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Ubicacion"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/OkResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    
+    
+  /brand:
+    x-swagger-router-controller: marca
+    get:
+      security:
+        - basicAuth: []
+        - tokenAuth: []
+      description: gets the marcaList
+      operationId: getMarcaList
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/OkResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      # require basic authentication on this route
+      security:
+        - basicAuth: []
+        - tokenAuth: []
+      description: Adds a new marca
+      operationId: addMarca
+      parameters:
+        - name: marca
+          description: New Marca's information
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Marca"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/OkResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+            
+    
   /vehicle:
     # our controller name
     x-swagger-router-controller: vehiculo
@@ -84,11 +165,11 @@ paths:
       security:
         - basicAuth: []
         - tokenAuth: []
-      description: Adds a new vehicle
+      description: adds a new Vehiculo
       operationId: addVehiculo
       parameters:
         - name: vehiculo
-          description: New vehicle's information
+          description: New Vehiculo definition
           in: body
           required: true
           schema:
@@ -102,6 +183,46 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /alarma:
+    x-swagger-router-controller: alarma
+    get:
+      security:
+        - basicAuth: []
+        - tokenAuth: []
+      description: Obtener alarma
+      operationId: getAlarma
+      responses:
+        "200":
+          description: Sucess
+          schema:
+            $ref: "#/definitions/OkResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      security:
+      - basicAuth: []
+      - tokenAuth: []
+      description: Ingresar una alalarma 
+      operationId: addAlarma
+      parameters:
+        - name: alarma
+          description: Agregar nueva alarma
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Alarma"
+      responses:
+        "200":
+          description:  Success
+          schema:
+            $ref: "#/definitions/OkResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+      
   /user:
     # our controller name
     x-swagger-router-controller: user
@@ -240,11 +361,8 @@ definitions:
   SystemHealthResponse:
     type: object
     properties:
-      status:
-        type: string
-        description: overall system status
       database:
-        type: number
+        type: string
         description: returns the database status
       systemTime:
         type: string
@@ -285,6 +403,14 @@ definitions:
           properties:
             username:
               type: string
+  Marca:
+    type: object
+    properties:
+      nombre:
+        type: string
+        description: Marca de auto
+    required:
+      - nombre
   Vehiculo:
     type: object
     properties:
@@ -298,10 +424,74 @@ definitions:
         type: string
         description: vehicle's model
       codigoOBD:
+        type: object
+        properties:
+          tipo:
+            type: string
+          value:
+            type: string
+      placas:
         type: string
-        description: vehicle's obdCode
     required:
       - username
+  Alarma:
+    type: object
+    properties:
+      username:
+        type: string
+        description: Alarma's owner
+      vehiculo:
+        type: string
+        description: Alarma's vehiculo
+      tipo: 
+        type: string
+        description: Alarma's type
+      estado:
+        type: string
+        description: Estado de la alarma
+      rangoDistancia:
+        type: object
+        properties:
+          rango: 
+            type: integer
+          ubic:
+            type: object
+            properties:
+              lat: 
+                type: integer
+              lon:
+                type: integer
+      rangoHorario:
+        type: object
+        properties:
+          inicio: 
+            type: integer
+          fin:
+            type: integer
+      fechaCreacion:
+        type: string
+      fechaActualizacion:
+        type: string
+  
+  Ubicacion:
+    type: object
+    properties:
+      idAutomovil:
+        type: string
+        description: Ubicacion ligada al automovil
+      ubicacion:
+        type: object
+        properties:
+          nombre:
+            type: string
+          lat:
+            type: integer
+          lon: 
+            type: integer
+      fechaCreacion:
+        type: string
+    required:
+    - idAutomovil
   User:
     type: object
     properties:
@@ -344,6 +534,7 @@ definitions:
     properties:
       message:
         type: string
+
   GetUserResponse:
     properties:
       user:
